@@ -1,3 +1,8 @@
+2014-07-22  Michael R. Crusoe <mcrusoe@msu.edu>
+
+    * Makefile: combine pip invocation into single "install-dependencies"
+    target.
+
 2014-07-21  Titus Brown <t@idyll.org>
 
     * sandbox/saturate-by-median.py: introduce new sandbox script for
